Optimize docker image build process
  - Run affymetrix/agilent tests in parallel
  - Set file permissions to 644 while copying
  - Set directory permissions to 755
  - Exclude unnecessary files vie dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,16 @@
-.git
-*/batch-job-specs
-*/test_volume
-*/volume
+**/.git
+**/__pycache__
+**/*.pyc
+**/batch-job-templates
+**/dockerfiles
+**/environments
+**/test_volume
+**/volume
+**/volumes_postgres
 config/externally_supplied_metadata/metasra/*.tab
 config/externally_supplied_metadata/metasra/metasra_keywords.json
 config/externally_supplied_metadata/metasra/metasra_translated.json
 config/externally_supplied_metadata/metasra/SRAmetadb.sqlite
 dr_env
 env/
-infrastructure/
-terraform/
-test_volume
-volume
-volumes_postgres/
+infrastructure
