--- a/api/dockerfiles/Dockerfile.api
+++ b/api/dockerfiles/Dockerfile.api
@@ -8,8 +8,9 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN <<EOF
 pip install --ignore-installed --no-cache-dir uwsgi
 chmod +x /home/user/collect_and_run_uwsgi.sh
-mkdir -p /tmp/www/static
+mkdir -m 755 -p /tmp/www/static
 chown user /tmp/www/static
+rm -rf /root/.cache/*
 EOF
 
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
