--- a/common/dockerfiles/Dockerfile.common_tests
+++ b/common/dockerfiles/Dockerfile.common_tests
@@ -7,14 +7,19 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /home/user
 
-COPY common/R/dependencies/common_tests/renv.lock .
-COPY common/R/renv_load.R renv_load_common_tests.R
+COPY --chmod=644 common/R/dependencies/common_tests/renv.lock .
+COPY --chmod=644 common/R/renv_load.R renv_load_common_tests.R
 RUN Rscript renv_load_common_tests.R
 
-COPY common/requirements.txt .
+COPY --chmod=644 common/requirements.txt .
 RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
-COPY common/ .
+COPY --chmod=644 common/ .
+
+RUN <<EOF
+find /home/user -type d ! -perm 755 -exec chmod 755 {} \;
+rm -rf /root/.cache/*
+EOF
 
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
