--- a/workers/dockerfiles/Dockerfile.illumina
+++ b/workers/dockerfiles/Dockerfile.illumina
@@ -7,23 +7,29 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /home/user
 
-COPY workers/R/dependencies/illumina/renv.lock .
-COPY common/R/renv_load.R renv_load_illumina.R
+COPY --chmod=644 workers/R/dependencies/illumina/renv.lock .
+COPY --chmod=644 common/R/renv_load.R renv_load_illumina.R
 RUN Rscript renv_load_illumina.R
 
-COPY workers/data_refinery_workers/processors/requirements.txt .
+COPY --chmod=644 workers/data_refinery_workers/processors/requirements.txt .
 RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
 # Get the latest version from the dist directory.
-COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed --no-cache-dir common/$(ls common -1 | sort --version-sort | tail -1)
+COPY --chmod=644 common/dist/data-refinery-common-* common/
+RUN <<EOF
+pip3 install --ignore-installed --no-cache-dir common/$(ls common -1 | sort --version-sort | tail -1)
+rm -r common
+EOF
 
-COPY .boto .boto
-COPY workers/ .
-COPY workers/data_refinery_workers/processors/detect_database.R .
-COPY workers/illumina_probe_maps/ probe_maps/
+COPY --chmod=644 .boto .boto
+COPY --chmod=644 workers/ .
+COPY --chmod=644 workers/data_refinery_workers/processors/detect_database.R .
+COPY --chmod=644 workers/illumina_probe_maps/ probe_maps/
 
-RUN rm -rf /root/.cache/*
+RUN <<EOF
+find /home/user -type d ! -perm 755 -exec chmod 755 {} \;
+rm -rf /root/.cache/*
+EOF
 
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
