update nginx log location

--- a/infrastructure/api-configuration/nginx_config.conf
+++ b/infrastructure/api-configuration/nginx_config.conf
@@ -3,7 +3,7 @@
 # Optionally, we can have Nginx sort itself out:
 worker_processes  auto;
 
-error_log  /tmp/error.log  error;
+error_log  /var/log/nginx/error.log  error;
 
 events {
     # Set this to ulimit -n
@@ -25,7 +25,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /tmp/access.log  main;
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     client_body_timeout 12;
