serve static files from var/www/static_volumes

--- a/infrastructure/api-configuration/nginx_config.conf
+++ b/infrastructure/api-configuration/nginx_config.conf
@@ -50,7 +50,7 @@ http {
 
         location /static {
             autoindex on;
-            alias /tmp/volumes_static/;
+            alias /var/www/volumes_static/;
         }
 
         location / {
